[gd_scene load_steps=2 format=3 uid="uid://drknuan3dpodn"]

[ext_resource type="Script" uid="uid://bpx1u3xvibpnt" path="res://scripts/dialogue_import.gd" id="1_xrvvw"]

[node name="Dialogue_import" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xrvvw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Import Custom Dialogue"
horizontal_alignment = 1

[node name="Spacer1" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
bbcode_enabled = true
text = "Select JSON dialogue files exported from: 
[url] josephsmithberger.com/dialogue_import [/url]
WARNING: This will delete all existing dialogue files!"
fit_content = true
autowrap_mode = 2
horizontal_alignment = 1

[node name="Spacer2" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SelectButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Import JSON Files"

[node name="Spacer3" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "No files selected"
horizontal_alignment = 1

[node name="Spacer4" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="ImportButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
disabled = true
text = "Import Dialogues"

[node name="Spacer5" type="Control" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Back to Game"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open File(s)"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Select"
file_mode = 1
filters = PackedStringArray("*.json ; JSON Files")
